# LuatOS

./: .gitignore  .gitmodules  AGENTS.md  AIRLINK_RPC_RELEASE_NOTES.md  LICENSE  M1kidE0yKoG7YrxXjpOc3cHsnXc.md  Makefile.inc  QWEN.md  README.en.md  README.md  README_FULL.md  airlink_nanopb_plan.md  docs.md  luatos.code-workspace  supported.md  tool.lua  vscode.code-workspace
bsp/air001/: CMakeLists.txt
bsp/air001/desgin/psd/: concept-overview.psd
bsp/air001/doc/: design.md  vdtp.md
bsp/air001/impl/: luat_base_air001.c  luat_fs_air001.c  luat_gpio_air001.c  luat_malloc_air001.c  luat_msgbus_air001.c  luat_timer_air001.c  luat_uart_air001.c
bsp/air001/include/: luat_vdev.h  luat_vdev_gpio.h  luat_vdev_uart.h
bsp/air001/src/: app.c
bsp/air724/sdk/: CMakeLists.txt  config.cmake
bsp/air724/sdk/api/: CMakeLists.txt
bsp/emulator/: CMakeLists.txt  README.md  build.sh
bsp/emulator/include/: luat_conf_bsp.h  luat_remotem.h
bsp/emulator/port/: luat_base_emulator.c  luat_crypto_emulator.c  luat_fs_emulator.c  luat_log_emulator.c  luat_lvgl_emulator.c  luat_malloc_emulator.c  luat_msgbus_emulator.c  luat_timer_emulator.c
bsp/emulator/remotem/: README.md  luat_remotem_main.c  luat_remotem_mqtt.c  luat_remotem_typeopt_base.c  luat_remotem_typeopt_indev.c
bsp/emulator/src/: lua.c  main_emulator.c
bsp/emulator/web/: emulator.js  index.html
bsp/linux/: CMakeLists.txt  README.md  build.sh  main.lua  xmake.lua
bsp/linux/include/: luat_conf_bsp.h
bsp/linux/port/: luat_base_linux.c  luat_crypto_linux.c  luat_gpio_linux.c  luat_log_linux.c  luat_malloc_linux.c  luat_mcu_linux.c  luat_msgbus_linux.c  luat_spi_linux.c  luat_timer_freertos.c  luat_timer_linux.c
bsp/linux/src/: lua.c  main.c
bsp/pico/: CMakeLists.txt  README.md
bsp/pico/include/: FreeRTOSConfig.h
bsp/pico/port/: luat_base_pico.c  luat_gpio.c  luat_uart.c
bsp/pico/src/: main.c
bsp/sysp/: CMakeLists.txt  README.md  main.lua
bsp/sysp/include/: luat_conf_bsp.h
bsp/sysp/lib/: sys.lua
bsp/sysp/port/: luat_base_sysp.c  luat_crypto_sysp.c  luat_fs_sysp.c  luat_gpio_sysp.c  luat_i2c_sysp.c  luat_log_sysp.c  luat_malloc_sysp.c  luat_mcu_sysp.c  luat_msgbus_sysp.c  luat_pin_sysp.c  luat_spi_device_sysp.c  luat_spi_sysp.c  luat_timer_sysp.c  luat_u8g2_sysp.c  luat_uart_sysp.c  luat_wdt_sysp.c
bsp/sysp/src/: main_sysp.c
bsp/win32/: CMakeLists.txt  README.md  build_cmake.sh  main.lua  xmake.lua
bsp/win32/include/: FreeRTOSConfig.h  luat_conf_bsp.h
bsp/win32/lib/: sys.lua
bsp/win32/luf_test/: abc.lua  abc.luf  luadb.lua  main.lua  main_luf.lua  main_test.lua  toburn.bat  toimg.bat
bsp/win32/lv_drivers/: win_drv.c  win_drv.h
bsp/win32/module_test/: 001task.lua  003zbuff.lua  004crypto.lua  005io.lua  006fatfs.lua  007lfs2.lua  010lvgl.lua  012vmx.lua  013cwait.lua  014iotauth.lua  015miniz.lua  crypto.lua  sys.lua  test.sh
bsp/win32/port/: luat_base_win32.c  luat_crypto_win32.c  luat_fs_win32.c  luat_gpio_win32.c  luat_i2c_win32.c  luat_lib_win32.c  luat_log_win32.c  luat_luadb_inline.c  luat_malloc_win32.c  luat_mcu_win32.c  luat_msgbus_win32.c  luat_sfd_onchip_win32.c  luat_spi_device.c  luat_spi_win32.c  luat_timer_freertos.c  luat_timer_win32.c  luat_uart_win32.c
bsp/win32/src/: lua.c  main_posix.c  main_win32.c
bsp/win32/tools/: update_inline_sys.lua  update_luadb_inline.lua
components/lvgl/: CMakeLists.txt  README.md  genapi.py  lv_conf.h  lvgl.h  lvgl.i
components/lvgl/binding/: luat_lib_fonts.h  luat_lib_lvgl.c  luat_lib_lvgl7.c  luat_lib_lvgl8.c  luat_lib_lvgl_anim.c  luat_lib_lvgl_btnmatrix_ex.c  luat_lib_lvgl_calendar_ex.c  luat_lib_lvgl_canvas_ex.c  luat_lib_lvgl_cb.c  luat_lib_lvgl_demo.c  luat_lib_lvgl_draw.c  luat_lib_lvgl_dropdown_ex.c  luat_lib_lvgl_font.c  luat_lib_lvgl_gauge_ex.c  luat_lib_lvgl_gif.c  luat_lib_lvgl_img.c  luat_lib_lvgl_imgbtn.c  luat_lib_lvgl_indev_ext.c  luat_lib_lvgl_line_ex.c  luat_lib_lvgl_map.c  luat_lib_lvgl_msgbox_ex.c  luat_lib_lvgl_qrcode.c  luat_lib_lvgl_roller_ex.c  luat_lib_lvgl_struct.c  luat_lib_lvgl_style.c  luat_lib_lvgl_style_dec.c  luat_lib_lvgl_tileview_ex.c  luat_lib_lvgl_widgets_ex.c  luat_lv_fs.c  luat_lvgl.h  luat_lvgl_anim.h  luat_lvgl_btnmatrix_ex.h  luat_lvgl_calendar_ex.h  luat_lvgl_canvas_ex.h  luat_lvgl_cb.h  luat_lvgl_demo.h  luat_lvgl_draw.h  luat_lvgl_dropdown_ex.h  luat_lvgl_ex.h  luat_lvgl_font.h  (+17 more)
components/lvgl/font/: luat_lvgl_fonts.h  lv_font_ex.c  lv_font_gtfont.c  lv_font_simsun_12.c  lv_font_simsun_14.c  lv_font_simsun_16.c  lv_font_simsun_18.c  lv_font_simsun_20.c  lv_font_simsun_22.c  lv_font_simsun_48.c
components/lvgl/lv_demos/: lv_ex_conf.h  lv_examples.h
components/lvgl/mock/: luat_conf_bsp.h
components/lvgl/sdl2/: LICENSE  README.md  lv_sdl_drv_display.c  lv_sdl_drv_display.h  lv_sdl_drv_input.c
components/lvgl/src/: CMakeLists.txt  lv_drv_conf.h
components/network/lwip/: CMakeLists.txt  SConscript  xmake.lua
lua/: CMakeLists.txt  README.md  SConscript  xmake.lua
lua/include/: lauxlib.h  ldebug.h  llimits.h  lobject.h  lstate.h  lua.h  luaconf.h  luat_bget.h  luat_memprofiler.h  rotable.h  rotable2.h
lua/src/: bget.c  lauxlib.c  lbaselib.c  lbitlib.c  lcorolib.c  ldblib.c  ldebug.c  ldo.c  lgc.c  linit.c  liolib.c  lmathlib.c  lmem.c  loadlib.c  lobject.c  loslib.c  lparser.c  lstate.c  lstring.c  lstrlib.c  lstrlib_exts.c  ltablib.c  luat_bget.c  lundump.c  lutf8lib.c  printf.c  rotable.c  rotable2.c
luat/modules/: .luat_lib_i2c.c.swp  CMakeLists.txt  SConscript  crc.c  lua_lib_iconv.c  luat_base.c  luat_cmux.c  luat_ems_server.c  luat_fs_weak.c  luat_irq.c  luat_lib_adc.c  luat_lib_bit64.c  luat_lib_ble.c  luat_lib_can.c  luat_lib_crypto.c  luat_lib_ctiot.c  luat_lib_dac.c  luat_lib_dbg.c  luat_lib_disp.c  luat_lib_eink.c  luat_lib_epaper.c  luat_lib_fota.c  luat_lib_fs.c  luat_lib_gpio.c  luat_lib_http.c  luat_lib_hwtimer.c  luat_lib_i2c.c  luat_lib_i2s.c  luat_lib_iconv.c  luat_lib_ir.c  luat_lib_keyboard.c  luat_lib_lcdseg.c  luat_lib_libcoap.c  luat_lib_libgnss.c  luat_lib_log.c  luat_lib_lpmem.c  luat_lib_mcu.c  luat_lib_mem.c  luat_lib_mqtt.c  luat_lib_mqttcore.c  (+40 more)
(+8963 files in other folders)
